@@ -1,3 +1,7 @@
+2014-10-24  Jonathan Wakely  <jwakely@redhat.com>
+
+	* ginclude/stdbool.h: Do not define bool, true or false in C++11.
+
 2014-10-24  Charles Baylis  <charles.baylis@linaro.org>
 
 	* config/aarch64/arm_neon.h (__LD2_LANE_FUNC): Rewrite using builtins,
